Cleans up comments and Css fix for hero on mobile

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -17,7 +17,6 @@ body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
   color: $text-color;
   background-image: $background-image; 
- // background-color: $background-color;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
      -moz-font-feature-settings: "kern" 1;
@@ -193,8 +192,7 @@ pre {
 #main-wrapper {
   background-color: $brightest-color;
 
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  @include wrapper-width(2);
   margin-right: auto;
   margin-left: auto;
   @extend %clearfix;
@@ -207,8 +205,7 @@ pre {
 
 
 .wrapper {
-  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  @include wrapper-width(2);
   margin-right: auto;
   margin-left: auto;
   padding-right: $margin-unit;
@@ -216,8 +213,7 @@ pre {
   @extend %clearfix;
 
   @include media-query($on-laptop) {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+    @include wrapper-width(1);
     padding-right: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
   }
